--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,11 @@ readme = "README.md"
 python = "^3.13"
 streamlit = "^1.50.0"
 pillow = "^11.3.0"
-google-genai = "^1.43.0"
+pandas = "^2.3.3"
+generativeai = "^0.0.1"
+pandas-stubs = "^2.3.2.250926"
+google-generativeai = "^0.8.5"
+google-genai = "^1.45.0"
 
 
 [build-system]
